--- a/scss/main.scss
+++ b/scss/main.scss
@@ -365,10 +365,19 @@ body {
         font-size: 32px;
     }
 }
+// .row-inside-content-2,.row-inside-content-3,.row-inside-content-4,.row-inside-content-5,.row-inside-content-6{
+//         border-bottom: 1px solid black;
+//         padding-bottom: 2px;
+//         &:hover{
+//             border-bottom: 3px solid black;
+//         }
+// }
 .row-inside-content-1,.row-inside-content-2,.row-inside-content-3,.row-inside-content-4,.row-inside-content-5,.row-inside-content-6{
-        border-bottom: 1px solid black;
+        width: 435px;
+        height: 75px;
+    border-bottom: 1px solid black;
         &:hover{
-            border-bottom: 6px solid;
+            border-bottom: 8px solid black;
         }
 }
 .row-head-class{
